--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -1,21 +1,21 @@
 {
   "development": {
     "username": "root",
-    "password": "Ervseiy",
+    "password": "Poupine.123",
     "database": "database_development",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
-    "password": "Ervseiy",
+    "password": "Poupine.123",
     "database": "database_test",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
-    "password": "Ervseiy",
+    "password": "Poupine",
     "database": "database_production",
     "host": "127.0.0.1",
     "dialect": "mysql"
