--- a/backend/package.json
+++ b/backend/package.json
@@ -24,9 +24,13 @@
   },
   "homepage": "https://github.com/PierreCharnace/PierreCharnace_P7_26102021#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
+    "mysql-server": "^1.0.5",
     "mysql2": "^2.3.2",
     "nodemon": "^2.0.14",
     "pg": "^8.7.1",
