--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,8 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "crypto-js": "^4.1.1",
+    "cryptojs": "^2.5.3",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
