--- a/backend/package.json
+++ b/backend/package.json
@@ -24,10 +24,12 @@
   },
   "homepage": "https://github.com/PierreCharnace/PierreCharnace_P7_26102021#readme",
   "dependencies": {
+    "async": "^3.2.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "crypto-js": "^4.1.1",
     "cryptojs": "^2.5.3",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
