--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -32,12 +32,13 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
+    "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "mysql-server": "^0.0.5",
     "mysql2": "^2.3.2",
     "nodemon": "^2.0.14",
     "pg": "^8.7.1",
-    "sequelize": "^5.22.4"
+    "sequelize": "^6.9.0"
   }
 }
