--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "fs": "^0.0.1-security",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.3",
     "mysql": "^2.18.1",
     "mysql-server": "^0.0.5",
     "mysql2": "^2.3.2",
